<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Flashie</string>

    <!--Settings-->
    <string name="action_settings">Settings</string>
    <string name="action_delete_card">Delete a card</string>
    <string name="action_edit_card">Edit a card</string>
    <string name="action_add_new_card">Add a new card</string>

    <!--Main Activity-->
    <string name="select_category_text">Quiz Categories</string>
    <string name="choose_category_label">Choose a Category</string>

    <!--Card Activity-->
    <string name="show_answer_text">Show Answer</string>
    <string name="nextCardButtonText">Next Card</string>
    <string name="no_more_cards_button_text">There are no more cards.</string>
    <string name="more_button_text">more</string>

    <string name="sampleQuestionText" tools:ignore="TypographyEllipsis">Click the button below to
        begin this magical learning journey.</string>
    <string name="sampleAnswerText">Let\'s go!</string>
    <string name="sampleButtonText">Let\'s start!</string>
    <string name="sampleCategoryText">Category</string>
    <string name="sampleNumberText">3</string>
    <string name="sample_text_string">Sample more dialog text goes here.</string>
    <string name="no_more_questions_text">No more questions. Press the back button and pick a new category.</string>

    <!--Add Card Activity-->
    <string name="add_card_label">Add Card</string>
    <string name="more_hint_text">Add more details here</string>
    <string name="answer_hint_text">Add answer text here</string>
    <string name="question_hint_text">Add question text here</string>
    <string name="category_hint_text">Add category text here</string>

    <!--Edit Card Activity-->
    <string name="edit_card_label">Edit Card</string>
    <string name="edit_more_hint_text">Edit more details here</string>
    <string name="edit_answer_hint_text">Edit answer text here</string>
    <string name="edit_question_hint_text">Edit question text here</string>
    <string name="edit_category_hint_text">Edit category text here</string>

    <!--Shared-->
    <string name="question_title_text">Question</string>
    <string name="answer_title_text">Answer</string>
    <string name="more_title_text">More</string>
    <string name="category_title_text">Category</string>
    <string name="submit_button_text">Submit</string>

    <string name="android_category">Android</string>
    <string name="data_structures_category">Data Structures</string>
    <string name="effective_java_category">Effective Java</string>
    <string name="general_category">General</string>
    <string name="interview_category">Interview Problems</string>
    <string name="java_category">Java</string>
    <string name="kotlin_category">Kotlin</string>
    <string name="answer_this_category">Answer This</string>
    <string name="bugs_category">Bugs</string>
    <string name="all_categories">All</string>

    <string name="action_add_card_to_firebase">Add dummy card in Firebase</string>
    <string name="action_read_card_from_firebase">Read card from Firebase</string>
    <string name="open_link_text">Open link</string>
    <string name="card_delete_confirmation">Delete the card?</string>
    <string name="card_load_placeholder">Imagine a super awesome loading cards animation!!</string>

</resources>
