<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/TextEditTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_title_text" />

    <EditText
        android:id="@+id/question_text_edit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_question_hint_text" />

    <TextView
        style="@style/TextEditTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_title_text" />

    <EditText
        android:id="@+id/answer_text_edit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_answer_hint_text" />

    <TextView
        style="@style/TextEditTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_title_text" />

    <EditText
        android:id="@+id/more_text_edit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_more_hint_text" />

    <TextView
        style="@style/TextEditTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_title_text" />


    <EditText
        android:id="@+id/category_text_edit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_category_hint_text" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:onClick="hideSoftKeyboard"
        android:paddingLeft="@dimen/button_padding"
        android:paddingRight="@dimen/button_padding"
        android:text="@string/submit_button_text" />

</LinearLayout>